# baxter_custom_ikfast

./: baxter_arm.accurate.left.urdf  baxter_arm.accurate.left.urdf~  baxter_arm.accurate.right.urdf  baxter_arm.accurate.right.urdf~  baxter_arm.left.dae  baxter_arm.left.rounded.dae  baxter_arm.right.dae  baxter_arm.right.rounded.dae  baxter_arm_no_hand.accurate.left.urdf  baxter_arm_no_hand.accurate.right.urdf  baxter_arm_no_hand.left.dae  baxter_arm_no_hand.left.rounded.dae  baxter_arm_no_hand.right.dae  baxter_arm_no_hand.right.rounded.dae  baxter_left_arm.kinbody.xml  baxter_left_arm.robot.xml  baxter_left_arm_ikfast_solver.cpp  baxter_left_arm_no_hand_ikfast_solver.cpp  baxter_right_arm.kinbody.xml  baxter_right_arm.robot.xml  baxter_right_arm_ikfast_solver.cpp  baxter_right_arm_no_hand_ikfast_solver.cpp  baxter_urdf.xml  baxter_urdf.xml~
baxter_ikfast_openrave/: CMakeLists.txt  package.xml
baxter_ikfast_openrave/src/: baxter_ikfastsolver.cpp  baxter_ikfastsolvers.cpp  baxter_leftarm_ikfast.cpp  baxter_leftarm_ikfast_backup.cpp  baxter_leftarm_no_hand_ikfast.cpp  baxter_rightarm_ikfast.cpp  baxter_rightarm_ikfast_backup.cpp  baxter_rightarm_no_hand_ikfast.cpp
baxter_ikfast_openrave/src/backups/: baxter_leftArm_ikfast_backup_2.cpp  baxter_leftArm_ikfast_from_openrave_model_backup.cpp  baxter_leftArm_ikfast_from_openrave_model_backup_2.cpp  baxter_rightArm_ikfast_from_openrave_model_backup.cpp  baxter_rightArm_ikfast_from_openrave_model_backup_2.cpp
